5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4132/executions/1800_2570.log
== SUBMITION (2019-06-12 12:24:59) 
-- CODE:
from math import * 
v = array(eval(input("Digite: ")))

media = sum(v)/size(v)
aux=v[0]-media
for i in range(size(v)):
	aux= aux * abs(v[i+1]-media)
	
aux = aux**(1/size(v))
print(round(aux,3))

	

	

-- EXECUTION TIME:
0.786268
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2570/main.py", line 2, in <module>
    v = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:25:03) 
-- CODE:
from math import * 
v = array(eval(input("Digite: ")))

media = sum(v)/size(v)
aux=v[0]-media
for i in range(size(v)):
	aux= aux * abs(v[i+1]-media)
	
aux = aux**(1/size(v))
print(round(aux,3))

	

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    v = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:25:18) 
-- CODE:
from numpy import *
from math import * 
v = array(eval(input("Digite: ")))

media = sum(v)/size(v)
aux=v[0]-media
for i in range(size(v)):
	aux= aux * abs(v[i+1]-media)
	
aux = aux**(1/size(v))
print(round(aux,3))

	

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:26:05) 
-- CODE:
from numpy import *
from math import * 
v = array(eval(input("Digite: ")))

media = sum(v)/size(v)
aux=1
for i in range(size(v)):
	aux= aux * abs(v[i]-media)
	
aux = aux**(1/size(v))
print(round(aux,3))

	

	

-- EXECUTION TIME:
1.30304
-- TEST CASE 1:
---- input:
[-25,8,-6,10,12,13,-4,-7,-9]
---- correct output:
8.839
---- user output:
8.839
-- TEST CASE 2:
---- input:
[-1.5,-5.5,-3.8,-9.6,-12.8,-13.3,-15.9]
---- correct output:
3.757
---- user output:
Digite: 3.757
-- TEST CASE 3:
---- input:
[32.2,31.6,42.8,61.7,10.5,52.7,15.9,17.8,19.2]
---- correct output:
0.212
---- user output:
Digite: 0.212
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:26:07) 
-- CODE:
from numpy import *
from math import * 
v = array(eval(input("Digite: ")))

media = sum(v)/size(v)
aux=1
for i in range(size(v)):
	aux= aux * abs(v[i]-media)
	
aux = aux**(1/size(v))
print(round(aux,3))

	

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:26:22) 
-- CODE:
from numpy import *
from math import * 
v = array(eval(input("Digite: ")))

media = sum(v)/size(v)
aux=1
for i in range(size(v)):
	aux= aux * abs(v[i]-media)
	
aux = aux**(1/size(v))
print(round(aux,3))

	

	

-- EXECUTION TIME:
0.973702
-- TEST CASE 1:
---- input:
[-25,8,-6,10,12,13,-4,-7,-9]
---- correct output:
8.839
---- user output:
8.839
-- TEST CASE 2:
---- input:
[-1.5,-5.5,-3.8,-9.6,-12.8,-13.3,-15.9]
---- correct output:
3.757
---- user output:
3.757
-- TEST CASE 3:
---- input:
[32.2,31.6,42.8,61.7,10.5,52.7,15.9,17.8,19.2]
---- correct output:
0.212
---- user output:
0.212
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
